--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./pgdata:/var/lib/postgresql/data
       - ./postgreSQL/create.sql:/docker-entrypoint-initdb.d/create.sql
-      - ./postgreSQL/set.sql:/docker-entrypoint-initdb.d/set.sql
+      #- ./postgreSQL/set.sql:/docker-entrypoint-initdb.d/set.sql
     ports:
       - 5477:5432
 
