--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+networks:
+  infobot-net:
+
 services:
 
   postgresql:
@@ -14,6 +17,8 @@ services:
       - ./postgreSQL/set.sql:/docker-entrypoint-initdb.d/set.sql
     ports:
       - 5477:5432
+    networks:
+      - infobot-net
 
   app:
     build: .
@@ -21,4 +26,6 @@ services:
       - 8081:8099
     depends_on:
       - postgresql
+    networks:
+      - infobot-net
     command: ["wait-for-it.sh", "postgresql:5432", "--", "/app/bin"]
